--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -78,8 +78,13 @@ i
 #personajeCanvas, #comicCanvas
 	+cf
 	background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQYV2O8O4HLh4EIwAhSqFzwbQshtaMK8YYQ0cEDAASpJc5/1r+xAAAAAElFTkSuQmCC')
-	outline: 5px solid $primario
 	margin-bottom: 10px
+
+#personajeCanvas
+	outline: 5px solid $primario
+
+
+
 
 #crearPersonaje
 	@extend %container
