--- a/fancybox/jquery.fancybox.css
+++ b/fancybox/jquery.fancybox.css
@@ -183,8 +183,11 @@
 }
 
 .fancybox-lock .fancybox-overlay {
+	/*
 	overflow: auto;
 	overflow-y: scroll;
+	*/
+	overflow: hidden;
 }
 
 /* Title helper */
