--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -953,10 +953,11 @@ a.selectedTab
 	width: 100%
 
 #overlay
-	background: black
+	background-color: black
+	opacity: 0.5
+	background: rgba(0,0,0,0.5)
 	bottom: 0
 	left: 0
-	opacity: 0.5
 	position: fixed
 	right: 0
 	top: 0
