--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -282,7 +282,7 @@ i
 
 #container
 	@extend %container
-	margin-top: $spacer*7
+	margin-top: $spacer*5
 	margin-bottom: $spacer
 
 
@@ -583,6 +583,14 @@ i
 		+box-shadow(rgba(black,0.2) 0px 2px 10px)
 		cursor: pointer
 
+
+	&:hover >div
+		div
+			img
+				opacity: 1
+				visibility: visible
+
+
 	// capsula
 	>div
 		//border: 5px solid black
@@ -599,6 +607,7 @@ i
 			
 			a
 				display: block
+				
 
 				img
 					+fx
@@ -607,10 +616,13 @@ i
 					height: 35px
 					+border-radius(40px)
 					+box-shadow(rgba(black,0.2) 0px 2px 3px)
+					opacity: 0
+					visibility: none
 
 			&:hover
 				img
 					+border-radius(0px)
+					
 
 
 
@@ -947,12 +959,12 @@ a.selectedTab
 
 
 
-#wraper
+#wraper, #wraper-ie8
 	margin: 10px auto
 	text-align: center
 	width: 100%
 
-#overlay
+#overlay, #overlay-ie8
 	background-color: black
 	opacity: 0.5
 	background: rgba(0,0,0,0.5)
@@ -963,7 +975,7 @@ a.selectedTab
 	top: 0
 	z-index: 100
 
-#popup
+#popup, #popup-ie8
 	background: none repeat scroll 0 0 $fondo
 	border: 10px solid $primario
 	left: 50%
@@ -979,6 +991,34 @@ a.selectedTab
 
 	p
 		margin-top: $spacer
+
+
+
+#overlay-ie8
+	display: none
+	background-color: black
+	opacity: 1
+
+#popup-ie8
+	padding: 100px
+	margin-left: -250px
+	width: 300px
+	top: 10%
+
+
+.tos
+	
+	margin-top: $spacer*2
+	text-align: center
+
+	a
+		color: $texto
+		font-family: Arial, Helvetica, sans-serif
+
+		margin-left: 10px
+		&:hover
+			color: $primario
+
 
 
 .jcrop-holder
