--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1008,9 +1008,11 @@ a.selectedTab
 
 
 .tos
-	
-	margin-top: $spacer*2
 	text-align: center
+	position: fixed
+	bottom: 10px
+	left: 50%
+	margin-left: -75px
 
 	a
 		color: $texto
