--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -782,7 +782,7 @@ a.selectedTab
 			&:after
 				content: ':'
 		p
-			+sans
+			//+sans
 			font-size: 0.75em
 			text-transform: none
 			float: left
