--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -783,7 +783,7 @@ a.selectedTab
 				content: ':'
 		p
 			//+sans
-			font-size: 0.75em
+			//font-size: 0.75em
 			text-transform: none
 			float: left
 			width: 280px
