--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -534,6 +534,7 @@ i
 
 .itemMeme
 	@extend %g2
+
 	width: 112px
 	+fx
 	position: relative
@@ -571,6 +572,14 @@ i
 			img
 				+border-radius(0px)
 
+
+#tab5 .itemMeme
+	height: 112px
+	display: table
+
+	img
+		display: table-cell
+		vertical-align: middle
 
 .itemThumbnail
 	@extend %g2
