--- a/css/styles.css
+++ b/css/styles.css
@@ -1606,6 +1606,7 @@ i {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  cursor: pointer;
 }
 .btn:hover {
   -webkit-transition: all 0.1s;
@@ -2160,6 +2161,7 @@ a.itemAction:hover {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  cursor: pointer;
 }
 .bx-controls-direction a:hover {
   -webkit-transition: all 0.1s;
@@ -2531,6 +2533,7 @@ a.selectedTab:hover {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  cursor: pointer;
   margin-top: 10px;
   position: absolute;
   bottom: -60px;
@@ -2634,6 +2637,7 @@ a.selectedTab:hover {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  cursor: pointer;
   margin-top: 10px;
   position: absolute;
 }
