admin styles alfa

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1039,3 +1039,24 @@ a.selectedTab
 	margin-bottom: $spacer
 
 
+
+// login
+
+
+
+.admin-login
+	display: block
+	width: 500px
+	margin: 0 auto
+
+	input[type="submit"]
+		+btn
+		border: 0
+		padding: 0
+
+
+
+
+
+
+
