--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1048,11 +1048,26 @@ a.selectedTab
 	display: block
 	width: 500px
 	margin: 0 auto
+	margin-top: 200px
+	padding: 50px
+	border: 5px solid $primario
+
+	label
+		width: 60px
+		display: inline-block
+		text-align: right
+		margin-right: 15px
+
 
 	input[type="submit"]
-		+btn
+		font-family: inherit
+		font-size: inherit
 		border: 0
 		padding: 0
+		+btn
+
+	div
+		margin-bottom: $spacer
 
 
 
