--- a/css/styles.css
+++ b/css/styles.css
@@ -2841,8 +2841,21 @@ a.selectedTab:hover {
   display: block;
   width: 500px;
   margin: 0 auto;
+  margin-top: 200px;
+  padding: 50px;
+  border: 5px solid #980d2e;
+}
+.admin-login label {
+  width: 60px;
+  display: inline-block;
+  text-align: right;
+  margin-right: 15px;
 }
 .admin-login input[type="submit"] {
+  font-family: inherit;
+  font-size: inherit;
+  border: 0;
+  padding: 0;
   padding: 10px;
   position: relative;
   color: #ebc101;
@@ -2862,8 +2875,6 @@ a.selectedTab:hover {
   -moz-border-radius: 3px;
   border-radius: 3px;
   cursor: pointer;
-  border: 0;
-  padding: 0;
 }
 .admin-login input[type="submit"]:hover {
   -webkit-transition: all 0.1s;
@@ -2928,4 +2939,7 @@ a.selectedTab:hover {
 }
 .admin-login input[type="submit"] .globo-pensamiento {
   background-position: 0 -810px;
+}
+.admin-login div {
+  margin-bottom: 10px;
 }
