--- a/css/styles.css
+++ b/css/styles.css
@@ -2844,12 +2844,14 @@ a.selectedTab:hover {
   margin-top: 200px;
   padding: 50px;
   border: 5px solid #980d2e;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0px 3px 5px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0px 3px 5px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 3px 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 10px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 10px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 10px;
 }
 .admin-login h1 {
   text-align: center;
+  margin-bottom: 10px;
+  font-size: 2em;
 }
 .admin-login label {
   width: 60px;
