--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1051,10 +1051,12 @@ a.selectedTab
 	margin-top: 200px
 	padding: 50px
 	border: 5px solid $primario
-	+box-shadow(rgba(black,0.3) 0px 3px 5px)
+	+box-shadow(rgba(black,0.5) 0px 2px 10px)
 
 	h1
 		text-align: center
+		margin-bottom: $spacer
+		font-size: 2em
 
 	label
 		width: 60px
